--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,5 +1,38 @@
-﻿body
-{
+#customBtn,#customBtn2 {
+    display: inline-block;
+    background: white;
+    color: #444;
+    width: 190px;
+    border-radius: 5px;
+    border: thin solid #888;
+    box-shadow: 1px 1px 1px grey;
+    white-space: nowrap;
+  }
+  
+  #customBtn,#customBtn2:hover {
+    cursor: pointer;
+  }
 
-}
+  span.label {
+    font-family: serif;
+    font-weight: normal;
+  }
 
+  span.icon {
+    display: inline-block;
+    background-image: url('../btn_google_signin_dark_focus_web.png');
+    vertical-align: middle;
+    width: 191px;
+    height: 46px;
+  }
+
+  span.buttonText {
+    display: inline-block;
+    vertical-align: middle;
+    padding-left: 42px;
+    padding-right: 42px;
+    font-size: 14px;
+    font-weight: bold;
+    /* Use the Roboto font that is loaded in the <head> */
+    font-family: 'Roboto', sans-serif;
+  }
