--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,5 +1,37 @@
+
+.container{
+  display:flex;
+  align-items: center;
+  height: 100%;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.jumbotron {
+  display: flex;
+  align-items: center;
+  /*flex-direction: column;*/
+  background-size: cover;
+  color: #ffffff;
+  background-color: #4885ed;
+  height: 150px;
+  width: 100%;
+  text-shadow: 0.25px 0.25px 0.25px #000000;
+  text-align: center;
+  justify-content: center;
+}
+
+.jumbotron h2 {
+  font-size: 60px;
+  font-weight: 700;
+  margin: 0;
+  color: #fff;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
 #customBtn,#customBtn2 {
-    display: inline-block;
     background: white;
     color: #444;
     width: 190px;
@@ -13,26 +45,16 @@
     cursor: pointer;
   }
 
-  span.label {
-    font-family: serif;
-    font-weight: normal;
+  .customGPlusSignIn{
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
   }
 
   span.icon {
-    display: inline-block;
-    background-image: url('../btn_google_signin_dark_focus_web.png');
+    background-image: url('../img/btn_google_signin_dark_focus_web.png');
     vertical-align: middle;
     width: 191px;
     height: 46px;
-  }
-
-  span.buttonText {
-    display: inline-block;
-    vertical-align: middle;
-    padding-left: 42px;
-    padding-right: 42px;
-    font-size: 14px;
-    font-weight: bold;
-    /* Use the Roboto font that is loaded in the <head> */
-    font-family: 'Roboto', sans-serif;
   }
