--- a/views/html/login.html
+++ b/views/html/login.html
@@ -1,48 +1,63 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Login</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="../vendor/bootstrap-4.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="../css/style.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-        <script src="../vendor/jquery-3.3.1.min.js"></script>
-        <script src="../vendor/popper.min.js"></script>
-        <script src="../vendor/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
-        <script src="../js/sample.js"></script>
-        <script src="https://apis.google.com/js/api:client.js"></script>
-    </head>
-    <body>
-        <br>
+
+<head>
+    <title>Login</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="../vendor/bootstrap-4.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+    <script src="../vendor/jquery-3.3.1.min.js"></script>
+    <script src="../vendor/popper.min.js"></script>
+    <script src="../vendor/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
+    <script src="../js/glogin.js"></script>
+    <script src="https://apis.google.com/js/api:client.js"></script>
+</head>
+
+<body>
+    <br>
+    <section class="jumbotron">
         <div class="container">
+            <div class="row text-center">
+                <h2>AnthroLink</h2>
+            </div>
+        </div>
+    </section>
+    <div class="container">
         <br>
-        <ul class="nav nav-pills mb-3"  id="pills-tab" role="tablist">
-            <li class="nav-item"><a class="nav-link active" data-toggle="pill" role="tab" href="#citizen" aria-controls="citizen" aria-selected="true"><h3>Citizen</h3></a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="pill" roll="tab" href="#organisation" aria-controls="organisation" aria-selected="false"><h3>Organisation</h3></a></li>
+        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+            <li class="nav-item"><a class="nav-link active" data-toggle="pill" role="tab" href="#citizen"
+                    aria-controls="citizen" aria-selected="true">
+                    <h3>Citizen</h3>
+                </a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="pill" roll="tab" href="#organisation"
+                    aria-controls="organisation" aria-selected="false">
+                    <h3>Organisation</h3>
+                </a></li>
         </ul>
-        <div class="tab content" id="pills-tabContent">
+        <div class="tab-content" id="pills-tabContent">
             <div id="citizen" class="container tab-pane fade show active" role="tabpanel" aria-labelledby="citizen"><br>
-                <h5> Connect via Google Account</h5>
+                <h5> Connect via Google Account</h5><br>
                 <div id="gSignInWrapper">
                     <div id="customBtn" class="customGPlusSignIn">
                         <span class="icon"></span>
                     </div>
                 </div>
                 <div id="name"></div>
-                <script>startApp();</script>
+                <script>startApp(document.getElementById("customBtn"), document.getElementById("name"));</script>
             </div>
             <div id="organisation" class="container tab-pane fade" role="tabpanel" aria-labelledby="organisation"><br>
-                <h5> Connect via Google Account</h5>
+                <h5> Connect via Google Account</h5><br>
                 <div id="gSignInWrapper2">
                     <div id="customBtn2" class="customGPlusSignIn">
                         <span class="icon"></span>
                     </div>
                 </div>
                 <div id="name2"></div>
-                <script>startApp2();</script>
+                <script>startApp(document.getElementById("customBtn2"), document.getElementById("name2"));</script>
             </div>
         </div>
     </div>
-    </body>
+</body>
 </html>
