--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,6 +1,6 @@
 
 .container{
-  display:flex;
+  display: flex;
   align-items: center;
   height: 100%;
   justify-content: center;
@@ -100,3 +100,6 @@
     border-color: #4885ed;
   }
   
+  #cont{
+    margin-bottom: 5%;
+  }
