--- a/views/html/login.html
+++ b/views/html/login.html
@@ -24,7 +24,7 @@
             </div>
         </div>
     </section>
-    <div class="container">
+    <div id="cont" class="container">
         <br>
         <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
             <li class="nav-item"><a class="nav-link active" data-toggle="pill" role="tab" href="#login"
@@ -36,7 +36,7 @@
                     <h3>Sign Up</h3>
                 </a></li>
         </ul>
-        <div class="tab-content" id="pills-tabContent">
+        <div class="tab-content col-sm-6" id="pills-tabContent">
             <div id="login" class="container tab-pane fade show active" role="tabpanel" aria-labelledby="login"><br>
                 <h6> Login with email</h6>
                 <div class="panel-body">
@@ -79,26 +79,33 @@
                 <h6> Sign Up with email</h6>
                 <div class="panel-body">
                     <div class="row">
-                        <div class="col-lg-12">
+                        <div class="col-lg-12 w-100">
                             <form id="register-form" action="../../app.js" method="post" role="form">
                                 <div class="form-group">
                                     <input type="text" name="name" id="name" tabindex="1" class="form-control"
-                                        placeholder="Name" value="">
+                                        placeholder="Name" required>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" name="email" id="email" tabindex="1" class="form-control"
-                                        placeholder="Email Address" value="">
+                                    <input type="email" name="email" id="email1" tabindex="1" class="form-control"
+                                        placeholder="Email Address" required>
                                 </div>
                                 <div class="form-group">
                                     <input type="password" name="password" id="password2" tabindex="2"
-                                        class="form-control" placeholder="Password" onkeyup='check();'>
+                                        class="form-control" placeholder="Password" onkeyup='check();' required>
                                 </div>
                                 <span id='message1'></span>
                                 <script>validatePassword()</script>
                                 <div class="form-group">
                                     <input type="password" name="confirm-password" id="confirm-password" tabindex="2"
-                                        class="form-control" placeholder="Confirm Password" onkeyup='check();'>
+                                        class="form-control" placeholder="Confirm Password" onkeyup='check();' required>
                                     <span id='message2'></span>
+                                </div>
+                                <div class="form-group">
+                                    <input list="type" placeholder="Type" class="form-control" required>
+                                    <datalist id="type">
+                                        <option value="Citizen">
+                                        <option value="Organisation">
+                                    </datalist>
                                 </div>
                                 <div class="form-group">
                                     <div class="row">
