--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,4 +1,3 @@
-
 .container{
   display: flex;
   align-items: center;
@@ -10,7 +9,6 @@
 .jumbotron {
   display: flex;
   align-items: center;
-  /*flex-direction: column;*/
   background-size: cover;
   color: #ffffff;
   background-color: #4885ed;
@@ -33,73 +31,206 @@
 }
 
 #customBtn,#customBtn2 {
-    background: white;
-    color: #444;
-    width: 190px;
-    border-radius: 5px;
-    border: thin solid #888;
-    box-shadow: 1px 1px 1px grey;
-    white-space: nowrap;
-  }
+  background: white;
+  color: #444;
+  width: 190px;
+  border-radius: 5px;
+  border: thin solid #888;
+  box-shadow: 1px 1px 1px grey;
+  white-space: nowrap;
+}
   
-  #customBtn,#customBtn2:hover {
+#customBtn,#customBtn2:hover {
     cursor: pointer;
-  }
+}
 
-  .customGPlusSignIn{
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    justify-content: center;
-  }
+.customGPlusSignIn{
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+}
 
-  .icon {
-    background-image: url('../img/btn_google_signin_dark_focus_web.png');
-    vertical-align: middle;
-    width: 191px;
-    height: 46px;
-  }
+.icon {
+  background-image: url('../img/btn_google_signin_dark_focus_web.png');
+  vertical-align: middle;
+  width: 191px;
+  height: 46px;
+}
 
-  .btn-login {
-    background-color: #4885ed;
-    outline: none;
-    color: #fff;
-    font-size: 14px;
-    height: auto;
-    font-weight: normal;
-    padding: 14px 0;
-    text-transform: uppercase;
-    border-color: #59B2E6;
-  }
+.btn-login {
+  background-color: #4885ed;
+  outline: none;
+  color: #fff;
+  font-size: 14px;
+  height: auto;
+  font-weight: normal;
+  padding: 14px 0;
+  text-transform: uppercase;
+  border-color: #59B2E6;
+}
   
-  .btn-login:hover,
+.btn-login:hover,  .btn-login:focus {
+  color: #fff;
+  background-color:#4885ed;
+  border-color: #4885ed;
+}
   
-  .btn-login:focus {
-    color: #fff;
-    background-color:#4885ed;
-    border-color: #4885ed;
-  }
+.btn-register {
+  background-color: #4885ed;
+  outline: none;
+  color: #fff;
+  font-size: 14px;
+  height: auto;
+  font-weight: normal;
+  padding: 14px 0;
+  text-transform: uppercase;
+  border-color: #4885ed;
+}
   
-  .btn-register {
-    background-color: #4885ed;
-    outline: none;
-    color: #fff;
-    font-size: 14px;
-    height: auto;
-    font-weight: normal;
-    padding: 14px 0;
-    text-transform: uppercase;
-    border-color: #4885ed;
-  }
+.btn-register:hover,  .btn-register:focus {
+  color: #fff;
+  background-color: #4885ed;
+  border-color: #4885ed;
+}
   
-  .btn-register:hover,
+#cont{
+  margin-bottom: 5%;
+}
+
+html {
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  width: 100%;
+  height: 100%;
+}
+
+body{
+  width: 100%;
+  height: 100%;
+  font-family: 'Poppins', sans-serif;
+  font-size: 15px;
+  letter-spacing: 0.5px;
+  line-height: 1.5;
+  padding-top: 10%;
+  padding-bottom: 5%;
+}
+
+a,i,.fa,.btn,
+a:hover,
+a:focus,.transition, #back-to-top:hover {
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s;
+}
+
+.banner {
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.banner .banner-content {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  top: 40%;
+  left: 50%;
+  -webkit-transform: transbtn btn-lg btn-successlate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
   
-  .btn-register:focus {
-    color: #fff;
-    background-color: #4885ed;
-    border-color: #4885ed;
-  }
-  
-  #cont{
-    margin-bottom: 5%;
-  }
+.form-control-borderless {
+  border: none;
+}
+
+.form-control-borderless:hover, .form-control-borderless:active, .form-control-borderless:focus {
+  border: none;
+  outline: none;
+  box-shadow: none;
+}
+
+.btn-success{
+  background-color: #4885ed;
+  border-color: #4885ed;
+}
+
+.ticketTab{
+  height: 25%;
+  width: 75%;
+  border-style: inset;
+  border-color: #4885ed;
+  padding: 1%;
+  margin: 1%;
+  overflow: auto;
+}
+
+#descr{
+  height: 100%;
+  width: 100%;
+  border-style: inset;
+  border-color: #4885ed;
+  padding: 1%;
+  margin: 5%;
+  overflow: auto;
+}
+
+.profile-userpic img {
+  float: none;
+  margin: 0 auto;
+  width: 50%;
+  height: 50%;
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  border-radius: 50% !important;
+}
+
+.profile-userinfo {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.profile-userinfo-name {
+  color: #5a7391;
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 7px;
+}
+
+.profile-userinfo-email {
+  text-transform: uppercase;
+  color: #5b9bd1;
+  font-size: 12px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+
+.profile-userbutton {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.profile-userbuttons .btn {
+  text-transform: uppercase;
+  font-size: 11px;
+  font-weight: 600;
+  padding: 6px 15px;
+  margin-right: 5px;
+}
+
+.profile-userbutton .btn:last-child {
+  margin-right: 0px;
+}
+
+.profile-content {
+  padding: 20px;
+  background: #fff;
+  min-height: 460px;
+}
