--- a/views/html/editProfile.html
+++ b/views/html/editProfile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Bootstrap Example</title>
+    <title>Profile</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../vendor/bootstrap-4.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -10,12 +10,10 @@
     <script src="../vendor/jquery-3.3.1.min.js"></script>
     <script src="../vendor/popper.min.js"></script>
     <script src="../vendor/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
-    <script src="../js/profile.js"></script>
+    <script src="../js/editProfile.js"></script>
 </head>
 
-<!-- <body onload="init()"> -->
-
-<body>
+<body onload="init()">
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,10 +22,10 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav w-100">
                 <li class="nav-item active">
-                    <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="dashboard">Dashboard <span class="sr-only"></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="ticket.html">Ticket</a>
+                    <a class="nav-link" href="search">Search</a>
                 </li>
                 <li class="nav-item dropdown ml-auto">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
@@ -35,8 +33,8 @@
                         <img src="">
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="profile.html">Edit Profile</a>
-                        <a class="dropdown-item" href="login.html">Logout</a>
+                        <a class="dropdown-item" href="editProfile">Edit Profile</a>
+                        <a class="dropdown-item" href="login">Logout</a>
                     </div>
                 </li>
             </ul>
@@ -45,15 +43,15 @@
     <div class="container">
         <h1>Edit Profile</h1>
         <hr>
-        <div class="row col-sm-12">
-            <div class="col-sm-3">
+        <div class="row col-lg-12">
+            <div class="col-lg-3">
                 <div class="text-center">
                     <img id="img" class="avatar img-circle" alt="avatar">
                     <h6>Upload a different photo...</h6>
                     <input type="file" class="form-control">
                 </div>
             </div>
-            <div class="col-sm-9 profile">
+            <div class="col-lg-9 profile">
                 <h3>Profile</h3>
                 <form id="edit-profile" method="post" action="../../app.js" class="form-horizontal" role="form">
                     <div class="form-group">
@@ -75,27 +73,26 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-md-3 control-label">Address:</label>
-                        <div class="col-md-8">
+                        <label class="col-lg-3 control-label">Address:</label>
+                        <div class="col-lg-8">
                             <input id="address" class="form-control" type="text">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-md-3 control-label">Phone No:</label>
-                        <div class="col-md-8">
+                        <label class="col-lg-3 control-label">Phone No:</label>
+                        <div class="col-lg-8">
                             <input id="phone" class="form-control" type="tel" pattern="[0-9]{10}">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-md-3 control-label"></label>
-                        <div class="col-md-8">
+                        <label class="col-lg-3 control-label"></label>
+                        <div class="col-lg-8">
                             <input type="submit" class="btn btn-primary" value="Save Changes">
                             <span></span>
                             <input type="reset" class="btn btn-default" value="Cancel">
                         </div>
                     </div>
                 </form>
-                <!-- <pre id="output"></pre> -->
             </div>
         </div>
     </div>
