Added tickets collection, modified routes

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -112,8 +112,13 @@ body{
   font-size: 15px;
   letter-spacing: 0.5px;
   line-height: 1.5;
-  padding-top: 5%;
+  margin-top: 5%;
+  /* padding-top: 5%; */
   padding-bottom: 5%;
+}
+
+#loginPage{
+  margin-top: 0;
 }
 
 a,i,.fa,.btn,
