--- a/views/html/navbar.html
+++ b/views/html/navbar.html
@@ -33,7 +33,7 @@
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="editProfile">Edit Profile</a>
-            <a class="dropdown-item" href="login">Logout</a>
+            <a class="dropdown-item" href="logout">Logout</a>
           </div>
         </li>
       </ul>
