--- a/views/html/login.html
+++ b/views/html/login.html
@@ -15,8 +15,7 @@
     <script src="../js/login.js"></script>
 </head>
 
-<body>
-    <br>
+<body id="loginPage">
     <section class="jumbotron">
         <div class="container">
             <div class="row text-center">
@@ -25,7 +24,6 @@
         </div>
     </section>
     <div id="cont" class="container">
-        <br>
         <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
             <li class="nav-item"><a class="nav-link active" data-toggle="pill" role="tab" href="#login"
                     aria-controls="login" aria-selected="true">
@@ -42,7 +40,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-lg-12">
-                            <form id="login-form" action="../../app.js" method="post" role="form">
+                            <form id="login-form" action="/login" method="post" role="form" name="login-submit">
                                 <div class="form-group">
                                     <input type="text" name="email" id="email" tabindex="1" class="form-control"
                                         placeholder="Email Address" value="">
@@ -80,7 +78,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-lg-12 w-100">
-                            <form id="register-form" action="../../app.js" method="post" role="form">
+                            <form id="register-form" action="/register" method="post" role="form" name="register-submit">
                                 <div class="form-group">
                                     <input type="text" name="name" id="name" tabindex="1" class="form-control"
                                         placeholder="Name" required>
