--- a/views/html/otherProfile.html
+++ b/views/html/otherProfile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Dashboard</title>
+    <title>OrgProfile</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../vendor/bootstrap-4.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -10,10 +10,10 @@
     <script src="../vendor/jquery-3.3.1.min.js"></script>
     <script src="../vendor/popper.min.js"></script>
     <script src="../vendor/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
-    <script src="../js/dashboard.js"></script>
+    <script src="../js/orgProfile.js"></script>
 </head>
 
-<body onload="init()">
+<body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,39 +41,25 @@
         </div>
     </nav>
     <div class="container">
-        <div class="row profile">
-            <div class="col-lg-3">
-                <div class="profile-sidebar">
-                    <div id="img" class="profile-userpic">
-                        <img src="../img/avatar-circle-human-female-black-7-512.png" class="img-responsive">
-                    </div>
-                    <div class="profile-userinfo">
-                        <div id="username" class="profile-userinfo-name">
-                            Name
-                        </div>
-                        <div id="email" class="profile-userinfo-email">
-                            Email
-                        </div>
-                    </div>
-                    <div class="profile-userbutton">
-                        <button onclick="location.href='editProfile'" type="button" class="btn btn-success btn-lg">Edit
-                            Profile</button>
+        <div class="row">
+            <div class="col-lg-8">
+                <p id="descr">desrc</p>
+            </div>
+            <div class="col-lg-4">
+                <img src="../img/avatar-circle-human-female-black-7-512.png" height="100%" width="100%">
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="col-lg-12 newTicket">
+            <form id="newTic" method="post" action="../../app.js" class="form-horizontal" role="form">
+                <div class="form-group">
+                    <label class="col-lg-3 control-label"></label>
+                    <div class="col-lg-8">
+                        <input type="submit" class="btn btn-primary" value="Raise Ticket">
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-9">
-                <div class="profile-content">
-                    <div class="ticketTab">
-                        <p id="upcoming">upcoming Pickups</p>
-                    </div>
-                    <div class="ticketTab">
-                        <p id="upcoming">Waiting Tickets</p>
-                    </div>
-                    <div class="ticketTab">
-                        <p id="previous">previous</p>
-                    </div>
-                </div>
-            </div>
+            </form>
         </div>
     </div>
 </body>
