--- a/views/html/ticket.html
+++ b/views/html/ticket.html
@@ -34,23 +34,13 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="editProfile">Edit Profile</a>
-                        <a class="dropdown-item" href="login">Logout</a>
+                        <a class="dropdown-item" href="logout">Logout</a>
                     </div>
                 </li>
             </ul>
         </div>
     </nav>
     <div class="container">
-        <div class="row">
-            <div class="col-lg-8">
-                <p id="descr">desrc</p>
-            </div>
-            <div class="col-lg-4">
-                <img src="../img/avatar-circle-human-female-black-7-512.png" height="100%" width="100%">
-            </div>
-        </div>
-        <br>
-        <br>
         <div class="col-lg-12 newTicket">
             <h5>Raise New Ticket</h5>
             <form id="newTic" method="post" action="../../app.js" class="form-horizontal" role="form">
