Updated code, with editProfile working

--- a/views/html/dashboard.html
+++ b/views/html/dashboard.html
@@ -30,7 +30,6 @@
                 <li class="nav-item dropdown ml-auto">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
-                        <img src="">
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="editProfile">Edit Profile</a>
@@ -44,11 +43,11 @@
         <div class="row profile">
             <div class="col-lg-3">
                 <div class="profile-sidebar">
-                    <div id="img" class="profile-userpic">
-                        <img src="../img/avatar-circle-human-female-black-7-512.png" class="img-responsive">
+                    <div class="profile-userpic">
+                        <img id="img" class="img-responsive">
                     </div>
                     <div class="profile-userinfo">
-                        <div id="username" class="profile-userinfo-name">
+                        <div id="name" class="profile-userinfo-name">
                             Name
                         </div>
                         <div id="email" class="profile-userinfo-email">
