--- a/views/html/login.html
+++ b/views/html/login.html
@@ -99,7 +99,7 @@
                                     <span id='message2'></span>
                                 </div>
                                 <div class="form-group">
-                                    <input list="type" placeholder="Type" class="form-control" required>
+                                    <input list="type" name="type" placeholder="Type" class="form-control" required>
                                     <datalist id="type">
                                         <option value="Citizen">
                                         <option value="Organisation">
