--- a/views/html/ticket.html
+++ b/views/html/ticket.html
@@ -10,7 +10,7 @@
     <script src="../vendor/jquery-3.3.1.min.js"></script>
     <script src="../vendor/popper.min.js"></script>
     <script src="../vendor/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
-    <script src="../js/orgProfile.js"></script>
+    <script src="../js/ticket.js"></script>
 </head>
 
 <body>
@@ -47,33 +47,38 @@
                 <div class="form-group">
                     <label class="col-lg-3 control-label">Citizen Name:</label>
                     <div class="col-lg-8">
-                        <input id="citName" class="form-control" type="text">
+                        <input name="citName" id="citName" class="form-control" type="text" readonly>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-lg-3 control-label">Organisation Name</label>
                     <div class="col-lg-8">
-                        <input id="orgName" class="form-control" type="text" readonly>
+                        <input name="orgName" id="orgName" class="form-control" type="text" readonly>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-lg-3 control-label">Pickup Date</label>
                     <div class="col-lg-8">
-                        <input id="pickup" class="form-control" type="date">
+                        <input name="pickup" id="pickup" class="form-control" type="date">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-lg-3 control-label">Description</label>
                     <div class="col-lg-8">
-                        <input id="tDescr" class="form-control" type="">
+                        <input list="TDescr" name="TDescr" placeholder="TDescr" class="form-control" required>
+                        <datalist id="TDescr">
+                            <option value="Organic Waste Pickup">
+                            <option value="E-Waste Pickup">
+                            <option value="Monetary Donations">
+                            <option value="Non-Monetary Donations">
+                        </datalist>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-lg-3 control-label"></label>
                     <div class="col-lg-8">
-                        <input type="submit" class="btn btn-primary" value="Raise Ticket">
-                        <span></span>
-                        <input type="reset" class="btn btn-default" value="Cancel">
+                        <input name="submit" type="submit" class="btn btn-primary" value="Raise Ticket">
+                        <input name="reset" type="reset" class="btn btn-default" value="Cancel">
                     </div>
                 </div>
             </form>
