Added ui for tickets

--- a/views/html/search.html
+++ b/views/html/search.html
@@ -55,14 +55,15 @@
                                         placeholder="Search by location, keywords, name, etc">
                                 </div>
                                 <div class="col-auto">
-                                    <button id="submit" class="btn btn-lg btn-success" type="submit">Search</button>
+                                    <button id="submit" name="submit" class="btn btn-lg btn-success"
+                                        type="submit">Search</button>
                                 </div>
                         </form>
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
                             <p id="results">
-
+                                p
                             </p>
                         </div>
                     </div>
