--- a/views/html/search.html
+++ b/views/html/search.html
@@ -12,7 +12,7 @@
     <script src="../js/search.js"></script>
 </head>
 
-<body>
+<body onload="init()">
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,6 +58,7 @@
                                     <button id="submit" name="submit" class="btn btn-lg btn-success"
                                         type="submit">Search</button>
                                 </div>
+                            </div>
                         </form>
                     </div>
                     <div class="row">
