--- a/views/html/ticket.html
+++ b/views/html/ticket.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>OrgProfile</title>
+    <title>Riase Ticket</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../vendor/bootstrap-4.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -106,7 +106,7 @@
                 <div class="form-group">
                     <label class="col-lg-3 control-label"></label>
                     <div class="col-lg-8">
-                        <input name="submit" type="submit" class="btn btn-primary" value="Raise Ticket">
+                        <input name="submit" type="submit" id="submit" class="btn btn-primary" value="Raise Ticket">
                         <input name="reset" type="reset" class="btn btn-default" value="Cancel">
                     </div>
                 </div>
