--- a/views/html/editProfile.html
+++ b/views/html/editProfile.html
@@ -41,54 +41,44 @@
         </div>
     </nav>
     <div class="container">
-        <form id="edit-profile" method="post" action="/editProfile" class="form-horizontal" role="form">
-            <div class="row col-lg-12">
-                <div class="col-lg-3">
-                    <div class="text-center">
-                        <img id="img" class="avatar img-circle" alt="avatar">
-                        <h6>Upload a different photo...</h6>
-                        <input name="img" type="file" class="form-control">
-                    </div>
+        <form id="edit-profile" method="post" action="/editProfile" class="form-horizontal row col-lg-12" role="form">
+            <div class="col-lg-3">
+                <div class="text-center">
+                    <img id="img" class="avatar img-circle" alt="avatar" height="50%" width="50%">
+                    <h6>Upload a different photo...</h6>
+                    <input name="img" type="file" class="form-control">
                 </div>
-                <div class="col-lg-9 profile">
-                    <h3>Edit Profile</h3>
-                    <div class="form-group">
-                        <label class="col-lg-3 control-label">Name:</label>
-                        <div class="col-lg-8">
-                            <input name="name" id="name" class="form-control" type="text">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-lg-3 control-label">Email:</label>
-                        <div class="col-lg-8">
-                            <input name="email" id="email" class="form-control" type="email" readonly>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-lg-3 control-label">Type:</label>
-                        <div class="col-lg-8">
-                            <input name="type" id="type" class="form-control" type="text" readonly>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-lg-3 control-label">Address:</label>
-                        <div class="col-lg-8">
-                            <input name="address" id="address" class="form-control" type="text">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-lg-3 control-label">Phone No:</label>
-                        <div class="col-lg-8">
-                            <input name= "phone" id="phone" class="form-control" type="tel" pattern="[0-9]{10}">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-lg-3 control-label"></label>
-                        <div class="col-lg-8">
-                            <input type="submit" class="btn btn-primary" value="Save Changes">
-                            <input type="reset" class="btn btn-default" value="Cancel">
-                        </div>
-                    </div>
+            </div>
+            <div class="col-lg-9 profile">
+                <h3>Edit Profile</h3>
+                <div class="form-group">
+                    <label class="control-label">Name:</label>
+                    <input name="name" id="name" class="form-control" type="text">
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Email:</label>
+                    <input name="email" id="email" class="form-control" type="email" readonly>
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Type:</label>
+                    <div id="typeL"></div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Address:</label>
+                    <input name="address" id="address" class="form-control" type="text">
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Phone No:</label>
+                    <input name="phone" id="phone" class="form-control" type="tel" pattern="[0-9]{10}">
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Bio:</label>
+                    <textarea name="bio" id="bio" class="form-control"></textarea>
+                </div>
+                <div class="form-group">
+                    <label class="control-label"></label>
+                    <input type="submit" class="btn btn-primary" value="Save Changes">
+                    <input type="reset" class="btn btn-default" value="Cancel">
                 </div>
             </div>
         </form>
