--- a/views/html/login.html
+++ b/views/html/login.html
@@ -78,7 +78,8 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-lg-12 w-100">
-                            <form id="register-form" action="/register" method="post" role="form" name="register-submit">
+                            <form id="register-form" action="/register" method="post" role="form"
+                                name="register-submit">
                                 <div class="form-group">
                                     <input type="text" name="name" id="name" tabindex="1" class="form-control"
                                         placeholder="Name" required>
@@ -92,18 +93,16 @@
                                         class="form-control" placeholder="Password" onkeyup='check();' required>
                                 </div>
                                 <span id='message1'></span>
-                                <script>validatePassword()</script>
                                 <div class="form-group">
                                     <input type="password" name="confirm-password" id="confirm-password" tabindex="2"
                                         class="form-control" placeholder="Confirm Password" onkeyup='check();' required>
                                     <span id='message2'></span>
                                 </div>
                                 <div class="form-group">
-                                    <input list="type" name="type" placeholder="Type" class="form-control" required>
-                                    <datalist id="type">
-                                        <option value="Citizen">
-                                        <option value="Organisation">
-                                    </datalist>
+                                    <select id="type" name="type" class="form-control" required>
+                                        <option>Citizen</option>
+                                        <option>Organisation</option>
+                                    </select>
                                 </div>
                                 <div class="form-group">
                                     <div class="row">
