added path.join, status codes

--- a/views/html/login.html
+++ b/views/html/login.html
@@ -49,10 +49,6 @@
                                     <input type="password" name="password" id="password" tabindex="2"
                                         class="form-control" placeholder="Password">
                                 </div>
-                                <div class="form-group text-center">
-                                    <input type="checkbox" tabindex="3" class="" name="remember" id="remember">
-                                    <label for="remember"> Remember Me</label>
-                                </div>
                                 <div class="form-group">
                                     <div class="row">
                                         <div class="col-sm-6 col-sm-offset-3">
@@ -66,9 +62,9 @@
                     </div>
                 </div>
                 <h6> Connect via Google Account</h6>
-                <div id="gSignInWrapper">
-                    <div id="customBtn" class="customGPlusSignIn">
-                        <a class="icon" href="/auth/google"></a>
+                <div id="gSignInWrapper" class="text-center">
+                    <div id="customBtn" class="customGPlusSignIn text-center">
+                        <a class="icon text-center" href="/auth/google"></a>
                     </div>
                 </div>
                 <div id="name"></div>
