--- a/views/html/search.html
+++ b/views/html/search.html
@@ -43,7 +43,6 @@
             <div class="banner-content">
                 <div class="container">
                     <div class="col-sm-12">
-                        <!-- <form id="search" method="post" action="/search" class="card card-sm" role="form"> -->
                         <div id="form" class="form row" name="form">
                             <div class="card-body row no-gutters align-items-center">
                                 <div class="col-auto">
@@ -59,13 +58,12 @@
                                         type="submit">Search</button>
                                 </div>
                             </div>
-                            <!-- </form> -->
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-10 align-items-center">
-                        <table class="table table-bordered table-hover" id="tab_logic" style="float:center">
+                    <div class="col-sm-10 align-items-center text-center">
+                        <table class="table table-bordered table-hover align-items-center text-center" id="tab_logic" style="float:center">
                             <thead>
                                 <tr>
                                     <th class="text-center">
