Made verification checks

--- a/views/html/login.html
+++ b/views/html/login.html
@@ -62,8 +62,8 @@
                     </div>
                 </div>
                 <h6> Connect via Google Account</h6>
-                <div id="gSignInWrapper" class="text-center">
-                    <div id="customBtn" class="customGPlusSignIn text-center">
+                <div id="gSignInWrapper">
+                    <div id="customBtn" class="customGPlusSignIn">
                         <a class="icon text-center" href="/auth/google"></a>
                     </div>
                 </div>
