--- a/views/html/search.html
+++ b/views/html/search.html
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="container">
                     <div class="col-sm-10 align-items-center text-center">
                         <table class="table table-bordered table-hover align-items-center text-center" id="tab_logic" style="float:center">
                             <thead>
