--- a/views/html/login.html
+++ b/views/html/login.html
@@ -64,7 +64,7 @@
                 <h6> Connect via Google Account</h6>
                 <div id="gSignInWrapper">
                     <div id="customBtn" class="customGPlusSignIn">
-                        <a class="icon text-center" href="/auth/google"></a>
+                        <a class="icon" href="/auth/google"></a>
                     </div>
                 </div>
                 <div id="name"></div>
