--- a/views/html/search.html
+++ b/views/html/search.html
@@ -62,8 +62,8 @@
                     </div>
                 </div>
                 <div class="container">
-                    <div class="col-sm-10 align-items-center text-center">
-                        <table class="table table-bordered table-hover align-items-center text-center" id="tab_logic" style="float:center">
+                    <div class="col-sm-10 align-items-center">
+                        <table class="table table-bordered table-hover" id="tab_logic" style="float:center">
                             <thead>
                                 <tr>
                                     <th class="text-center">
