--- a/views/html/ticket.html
+++ b/views/html/ticket.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Riase Ticket</title>
+    <title>Raise Ticket</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../vendor/bootstrap-4.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@
     <div class="container">
         <div class="col-lg-12 newTicket">
             <h5>Raise New Ticket</h5>
-            <form id="newTic" method="post" action="/ticket" class="form-horizontal" role="form">
+            <div id="newTic" class="form-horizontal">
                 <div class="form-group">
                     <label class="col-lg-3 control-label">Citizen Name:</label>
                     <div class="col-lg-8">
@@ -106,11 +106,12 @@
                 <div class="form-group">
                     <label class="col-lg-3 control-label"></label>
                     <div class="col-lg-8">
-                        <input name="submit" type="submit" id="submit" class="btn btn-primary" value="Raise Ticket">
+                        <button name="submit" type="submit" id="submit" class="btn btn-primary">Raise
+                            Ticket</button>
                         <input name="reset" type="reset" class="btn btn-default" value="Cancel">
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
 </body>
